# LUKSbox

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DISCLAIMER.md  FUZZING.md  LICENSE  NOTICE  README.md  SECURITY.md  TESTING.md  TRADEMARK.md  audit.toml
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz-nightly.yml  release.yml
crates/luksbox-cli/: Cargo.toml
crates/luksbox-cli/examples/: passphrase_crack.rs
crates/luksbox-cli/src/: main.rs  passphrase.rs  wizard.rs
crates/luksbox-cli/tests/: cleanup_orphans.rs  cli.rs  functional.rs  kdf_calibration.rs  mount_safety.rs  passphrase_exposure.rs
crates/luksbox-core/: Cargo.toml
crates/luksbox-core/benches/: dudect_aead_open.rs  dudect_hmac_verify.rs  dudect_reference_leaky.rs  dudect_slot_unlock.rs
crates/luksbox-core/src/: aead.rs  deniable.rs  error.rs  file_util.rs  header.rs  kdf.rs  key.rs  keyslot.rs  lib.rs  secret_box.rs  secret_mem.rs
crates/luksbox-core/tests/: aead_kat.rs  argon2_dos_guard.rs  fido2_xplatform_wire.rs  round13_file_util.rs  security_invariants.rs  windows_extract_junction.rs
crates/luksbox-ct-bench/: Cargo.toml
crates/luksbox-ct-bench/src/: lib.rs
crates/luksbox-fido2/: Cargo.toml  build.rs
crates/luksbox-fido2/examples/: full_probe.rs  multidev_probe.rs  probe.rs  xplatform_hmac_probe.rs
crates/luksbox-fido2/src/: authenticator.rs  error.rs  ffi.rs  hid.rs  lib.rs  mock.rs  protocol.rs  webauthn.rs  webauthn_paths.rs
crates/luksbox-fido2/tests/: rogue_authenticator.rs
crates/luksbox-format/: Cargo.toml
crates/luksbox-format/benches/: dudect_deniable_envelope.rs
crates/luksbox-format/examples/: gen_fuzz_seeds.rs
crates/luksbox-format/src/: anchor.rs  container.rs  deniable_header.rs  error.rs  hybrid_sidecar.rs  lib.rs  metadata.rs  sim_file.rs
crates/luksbox-format/tests/: cipher_suite_correctness.rs  deniable_workflows.rs  file_permissions.rs  round12_findings.rs  round13_findings.rs  security_invariants.rs
crates/luksbox-fuse-t/: Cargo.toml  build.rs  wrapper.h
crates/luksbox-fuse-t/src/: bindings_generated.rs  lib.rs  ops.rs  sys.rs
crates/luksbox-gui/: Cargo.toml  build.rs
crates/luksbox-gui/src/: app.rs  clipboard_guard.rs  main.rs  ops.rs  preferences.rs  recent.rs  theme.rs
crates/luksbox-mount/: Cargo.toml
crates/luksbox-mount/src/: fuse.rs  fuse_t.rs  lib.rs  unix_statvfs.rs  winfsp.rs  winfsp_path.rs
crates/luksbox-mount/tests/: fuse_mount.rs  winfsp_mount.rs
crates/luksbox-pq/: Cargo.toml
crates/luksbox-pq/src/: lib.rs  seed_file.rs
crates/luksbox-pq/tests/: end_to_end_hybrid.rs  fips203_conformance.rs  ml_kem_kat.rs  round13_seed_file.rs  seed_file_dos_guard.rs
crates/luksbox-sep/: Cargo.toml  build.rs
crates/luksbox-sep/src/: lib.rs  mock.rs  real.rs
crates/luksbox-sep/swift/: SepShim.swift
crates/luksbox-tpm/: Cargo.toml  README.md
crates/luksbox-tpm/src/: lib.rs  mock.rs  real.rs
crates/luksbox-tpm/tests/: rogue_tpm.rs  swtpm_container.rs  swtpm_integration.rs
crates/luksbox-vfs/: Cargo.toml
crates/luksbox-vfs/src/: chunk.rs  error.rs  lib.rs  tree.rs  vfs.rs
crates/luksbox-vfs/tests/: chunk_suite_correctness.rs  metadata_format_v2.rs  round13_findings.rs  security_invariants.rs
docs/: CRYPTO_SPEC.md  DENIABLE_HEADER.md  HARDWARE_SIDE_CHANNEL_NOTES.md  MACOS_FUSE_T.md  MACOS_FUSE_T_FUTURE.md  PROJECT_OVERVIEW.md  SECURITY_ARCHITECTURE.md  SECURITY_AUDIT_ROUND_12.md  SECURITY_AUDIT_ROUND_13.md  SECURITY_AUDIT_ROUND_14.md  SEP_KEYSLOT_DESIGN.md  TPM_FUTURE_IMPROVEMENTS.md  TPM_LINUX_PERMISSIONS.md  WORKING_WITH_CLAUDE.md
fuzz/: Cargo.toml
fuzz-afl/: .gitignore  Cargo.toml
fuzz-afl/seeds/auth_then_process/: adversarial_huge_counts  root_only
fuzz-afl/seeds/chunk_aead_decrypt/: seed_4
fuzz-afl/seeds/deniable_envelope_multi_slot/: seed_1  seed_3
fuzz-afl/seeds/header_parse/: seed_aes  seed_chacha  seed_fido
fuzz-afl/seeds/hybrid_sidecar_parse/: magic_only  v2_1024_truncated  v2_level_0  v2_one_1024_zeros  v2_one_768_zeros  v2_zero  v_unknown
fuzz-afl/seeds/keyslot_parse/: seed_fido  seed_pp
fuzz-afl/seeds/metadata_parse/: seed_short  seed_valid
fuzz-afl/seeds/seed_file_parse/: hostile_m_cost_4G  hostile_p_cost_max  safe_skeleton  wrong_magic  wrong_version  zero_t_cost
fuzz/corpus/auth_then_process/: five_files  regression_oom_unbounded_bincode
fuzz/corpus/chunk_aead_decrypt/: seed_2  seed_3
fuzz/corpus/chunk_list_block_parse/: count_max  count_oob  empty_with_next  entry_gen_zero  exactly_253_entries  exactly_max_count  full_no_next  full_with_next  max_u64_ids  next_gen_zero  next_id_zero_gen_set  next_pointer_high_bit  one_entry_no_next  pad_55  pad_aa
fuzz/corpus/deniable_envelope_multi_slot/: seed_2  seed_4
fuzz/corpus/deniable_header_parse/: seed_passphrase
fuzz/corpus/header_parse/: seed_chacha  seed_fido  seed_v3_multi
fuzz/corpus/header_roundtrip/: seed_aes  seed_fido  seed_v3_multi
fuzz/corpus/hybrid_sidecar_parse/: v1_zero  v2_count_255  v2_level_255  v2_max_768  v2_truncated_at_entry  wrong_magic
fuzz/corpus/keyslot_parse/: seed_fido  seed_fido_v3_titan  seed_fido_v3_yubikey  seed_pp
fuzz/corpus/metadata_parse/: seed_short  seed_valid
fuzz/corpus/seed_file_parse/: hostile_m_cost_max  hostile_t_cost_max  magic_only  truncated_at_kdf  truncated_in_salt  zero_m_cost  zero_p_cost
fuzz/corpus/slot_payload_decode/: seed_fido2_payload
fuzz/fuzz_targets/: anchor_parse.rs  auth_then_process.rs  chunk_aead_decrypt.rs  chunk_list_block_parse.rs  deniable_envelope_multi_slot.rs  deniable_header_parse.rs  header_parse.rs  header_roundtrip.rs  hybrid_sidecar_adversarial.rs  hybrid_sidecar_parse.rs  keyslot_parse.rs  metadata_parse.rs  seed_file_parse.rs  sep_blob_parse.rs  sep_region_parse.rs  slot_payload_decode.rs  slot_payload_roundtrip.rs  v2_mirror_recovery.rs  vfs_ops.rs  webauthn_device_path.rs  winfsp_path_parse.rs
scripts/: audit.sh  build_icons.sh  build_release.sh  bundle_macos_gui.sh  clean_for_push.sh  fido2_smoke.sh  fuzz_server.sh  release_fuzz.sh  run_dudect.sh  setup_mingw_libfido2.sh  setup_mingw_winfsp.sh
(+1 files in other folders)
