# Out-of-workspace crate: AFL++ harnesses for sustained server-side
# fuzzing. Keeps `cargo build`/`cargo test` of the main workspace
# unaffected (AFL builds need extra instrumentation flags).
#
# Install AFL toolchain once on the server:
#   apt install build-essential clang llvm
#   cargo install --version 0.15 afl    # afl.rs == cargo-afl wrapper of AFL++
#
# Build all harnesses:
#   cd fuzz-afl && cargo afl build --release
#
# Run one harness for an hour with 8 cores:
#   ./scripts/fuzz_server.sh header_parse 8 3600
#
# See FUZZING.md for the full server playbook.

[package]
name = "luksbox-fuzz-afl"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.85"

[dependencies]
afl = "0.15"
luksbox-core = { path = "../crates/luksbox-core" }
luksbox-format = { path = "../crates/luksbox-format" }
luksbox-pq = { path = "../crates/luksbox-pq" }
# Reachable from the chunk_aead_decrypt harness which calls
# `chunk::file_key_for_mvk` to mirror the production file-key
# derivation. Harness is otherwise self-contained (no Vfs::open,
# no DirectoryTree walk), so this dep doesn't drag in the heavy
# Container init cost on every fuzz iteration.
luksbox-vfs = { path = "../crates/luksbox-vfs" }
# SEP per-blob decoder + in-header region parse/serialize. `hardware`
# stays OFF: parser types compile on every host (CryptoKit FFI ops are
# cfg-gated to macOS), so the SEP harnesses run on a Linux fuzz server.
luksbox-sep = { path = "../crates/luksbox-sep" }
tempfile = "3"
# bincode kept for any legacy harness that hasn't migrated yet;
# new harnesses prefer postcard to match the production decoder.
bincode = { version = "2.0", features = ["serde"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

# Explicit [[bin]] entries so each new harness shows up in
# `cargo afl build` without relying on the implicit src/bin/ rule.
# Order kept alphabetical so additions are obvious in diffs.
[[bin]]
name = "anchor_parse"
path = "src/bin/anchor_parse.rs"

[[bin]]
name = "auth_then_process"
path = "src/bin/auth_then_process.rs"

[[bin]]
name = "chunk_aead_decrypt"
path = "src/bin/chunk_aead_decrypt.rs"

[[bin]]
name = "deniable_header_parse"
path = "src/bin/deniable_header_parse.rs"

[[bin]]
name = "header_parse"
path = "src/bin/header_parse.rs"

[[bin]]
name = "hybrid_sidecar_parse"
path = "src/bin/hybrid_sidecar_parse.rs"

[[bin]]
name = "keyslot_parse"
path = "src/bin/keyslot_parse.rs"

[[bin]]
name = "metadata_parse"
path = "src/bin/metadata_parse.rs"

[[bin]]
name = "seed_file_parse"
path = "src/bin/seed_file_parse.rs"

[[bin]]
name = "sep_blob_parse"
path = "src/bin/sep_blob_parse.rs"

[[bin]]
name = "sep_region_parse"
path = "src/bin/sep_region_parse.rs"

[[bin]]
name = "slot_payload_decode"
path = "src/bin/slot_payload_decode.rs"

[[bin]]
name = "slot_payload_roundtrip"
path = "src/bin/slot_payload_roundtrip.rs"

[[bin]]
name = "deniable_envelope_multi_slot"
path = "src/bin/deniable_envelope_multi_slot.rs"

[profile.release]
# AFL needs branch coverage instrumentation; opt-level 3 is fine but
# debug-assertions catch overflow bugs the optimizer otherwise hides.
debug-assertions = true
overflow-checks = true
lto = false             # AFL's instrumentation pass is incompatible with LTO
codegen-units = 1       # better instrumentation density

# This crate is intentionally NOT in the workspace, AFL build flags
# would otherwise contaminate the main `cargo build`.
[workspace]
