[package]
name = "luksbox-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.85"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
luksbox-core = { path = "../crates/luksbox-core" }
luksbox-format = { path = "../crates/luksbox-format" }
luksbox-pq = { path = "../crates/luksbox-pq" }
# Pure-string parsers in `luksbox_mount::winfsp_path` - no FFI / no
# winfsp_wrs dependency, compiles on every host. The `winfsp` module
# itself is gated on `target_os = "windows"` and stays out of Linux
# fuzz builds.
luksbox-mount = { path = "../crates/luksbox-mount" }
luksbox-vfs = { path = "../crates/luksbox-vfs" }
# Pure-string device-path classifier in `luksbox_fido2::webauthn_paths`.
# Hardware feature stays off - the classifier is in the unconditionally-
# compiled module.
luksbox-fido2 = { path = "../crates/luksbox-fido2" }
# `SepBlob` decoder + the in-header SEP region parse/serialize. The
# `hardware` feature stays OFF: the parser types compile on every host
# (only the CryptoKit FFI ops are cfg-gated to macOS), so the SEP fuzz
# targets run in ordinary Linux CI.
luksbox-sep = { path = "../crates/luksbox-sep" }
tempfile = "3"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "header_parse"
path = "fuzz_targets/header_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "keyslot_parse"
path = "fuzz_targets/keyslot_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metadata_parse"
path = "fuzz_targets/metadata_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header_roundtrip"
path = "fuzz_targets/header_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hybrid_sidecar_parse"
path = "fuzz_targets/hybrid_sidecar_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "seed_file_parse"
path = "fuzz_targets/seed_file_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_then_process"
path = "fuzz_targets/auth_then_process.rs"
test = false
doc = false
bench = false

[[bin]]
name = "winfsp_path_parse"
path = "fuzz_targets/winfsp_path_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "webauthn_device_path"
path = "fuzz_targets/webauthn_device_path.rs"
test = false
doc = false
bench = false

# VFS mutating operations: feeds attacker-controlled name strings
# (UTF-8 garbage, embedded NUL, slashes, oversized, control chars,
# `..`, reserved Windows names) through the real `Vfs::mkdir`,
# `create`, `rename`, `unlink`, `lookup`, `readdir`, `write`, and
# `flush` paths. Reuses one Container+Vfs across iterations to
# amortize the Argon2id startup cost. Goal: NEVER panic on any
# attacker-controlled name; rejected names hit a typed `Error`.
[[bin]]
name = "vfs_ops"
path = "fuzz_targets/vfs_ops.rs"
test = false
doc = false
bench = false

# Adversarial sidecar entries: builds a structurally-valid v2 sidecar
# from fuzzer input (count/level/duplicate-slot-idx all attacker-
# controlled), writes it next to a real hybrid-PQ vault, and tries
# to open. Goal: NEVER panic, NEVER unlock with wrong shared, and
# correctly reject duplicates/overruns at parse.
[[bin]]
name = "hybrid_sidecar_adversarial"
path = "fuzz_targets/hybrid_sidecar_adversarial.rs"
test = false
doc = false
bench = false

# Deniable header parse: feed arbitrary 8 KiB+ bytes through the
# deniable open path with attacker-controlled passphrase + cipher
# choice. Verifies (a) never panic, (b) never leaks failure mode
# via a non-`OpaqueUnlockFailed` error variant. Critical because
# the deniable format's no-oracle property is a load-bearing
# security property; a panic or distinguishable error would
# fingerprint the vault to a remote attacker.
[[bin]]
name = "deniable_header_parse"
path = "fuzz_targets/deniable_header_parse.rs"
test = false
doc = false
bench = false

# Slot-payload decoder: bypasses Argon2id and feeds arbitrary
# PAYLOAD_PLAINTEXT_LEN-byte buffers directly into
# `SlotPayload::decode`. Reaches the length-cap, reserved-byte, and
# joint-material-budget checks that `deniable_header_parse` can only
# reach if the fuzzer guesses a valid envelope KEK (effectively
# never). Verifies: never panic, every rejection is exactly
# `Error::InvalidField`, and any successful decode round-trips
# byte-for-byte through `encode` (excluding the random padding tail).
[[bin]]
name = "slot_payload_decode"
path = "fuzz_targets/slot_payload_decode.rs"
test = false
doc = false
bench = false

# Slot-payload round-trip: construct `SlotPayload` via `new()` from
# attacker-controlled length triples, encode, decode, and check
# field-by-field equality. Catches encoder/decoder asymmetries that
# would cause legitimate vaults to corrupt themselves across
# save/load - a class of bug unit tests miss because they only
# exercise the eight canonical layouts.
[[bin]]
name = "slot_payload_roundtrip"
path = "fuzz_targets/slot_payload_roundtrip.rs"
test = false
doc = false
bench = false

# Chunk AEAD decrypt: fuzz the per-chunk `aead::open` call with
# attacker-controlled bytes at the production callsite. Replicates
# the AAD construction (file_id || chunk_idx || generation) and the
# file_key derivation, then feeds arbitrary nonce+ct+tag from the
# fuzzer. Catches: panic on weird ct lengths, OOB on truncated
# inputs, any subtle distinguishability between rejection paths.
[[bin]]
name = "chunk_aead_decrypt"
path = "fuzz_targets/chunk_aead_decrypt.rs"
test = false
doc = false
bench = false

# Anchor parse: covers both standard (48 B) and deniable (256 B)
# anchor formats. Random bytes -> assert clean error path; no panic,
# no infinite loop, no distinguishable failure mode in deniable.
[[bin]]
name = "anchor_parse"
path = "fuzz_targets/anchor_parse.rs"
test = false
doc = false
bench = false

# Round 12: builds a real deniable header with a fuzzer-selected
# subset of slots occupied, drives `try_open_envelope_v2` with an
# attacker passphrase. Pins the multi-slot opacity invariant (see
# docs/SECURITY_AUDIT_ROUND_12.md, finding R12-01). The timing-leak
# proper is benched separately via dudect; this target catches
# regressions that re-introduce a NON-OPAQUE error or a panic on the
# multi-slot path.
[[bin]]
name = "deniable_envelope_multi_slot"
path = "fuzz_targets/deniable_envelope_multi_slot.rs"
test = false
doc = false
bench = false

# v3 metadata format: fuzz the chunk-list-block parser. The function
# is called with attacker-influenced bytes (a malicious vault author
# with MVK could craft a chunk-list block with out-of-range count,
# generation=0 in the next-pointer, etc.). Parser must never panic
# and must never return invariant-violating output.
[[bin]]
name = "chunk_list_block_parse"
path = "fuzz_targets/chunk_list_block_parse.rs"
test = false
doc = false
bench = false

# v0.3.0 mirror-recovery security boundary fuzzer. Builds a v2 vault
# with two passphrases A and B, revokes A, applies fuzzer-chosen
# corruption to the live header or sidecar mirror, then tries to open
# with both. Invariant: a revoked passphrase must NEVER unlock,
# regardless of corruption pattern. Catches regressions of the
# reviewer-found auth-bypass where mirror recovery fired on
# unlock-failure (not just parse-failure) and let the mirror's
# previous-good keyslot table authenticate the revoked credential.
[[bin]]
name = "v2_mirror_recovery"
path = "fuzz_targets/v2_mirror_recovery.rs"
test = false
doc = false
bench = false

# v0.4.0 SEP per-blob decoder: arbitrary bytes through
# `SepBlob::from_bytes` (the `[flags][sep_data_len][sep_data][eph_pub]`
# wire form read off disk and across the CryptoKit FFI). Never panic;
# malformed input is `Err(_)`. Runs on Linux (parser types are not
# cfg-gated).
[[bin]]
name = "sep_blob_parse"
path = "fuzz_targets/sep_blob_parse.rs"
test = false
doc = false
bench = false

# v0.4.0 in-header SEP region: drives the region table
# serialize/parse with fuzzer-controlled slot indices, counts, and blob
# lengths via the public Header API. Never panic; a header we built must
# re-parse; every accepted blob round-trips byte-identical. Pairs with
# the curated `seed_sep` corpus entry that warms header_parse's region
# path.
[[bin]]
name = "sep_region_parse"
path = "fuzz_targets/sep_region_parse.rs"
test = false
doc = false
bench = false

# Fuzz binaries should not be part of the workspace; cargo-fuzz expects to
# build them with sanitizers and -C codegen-units=1. Excluding from the
# workspace lets us keep workspace-wide `cargo build` fast and unsanitized.
[workspace]
